# fc-bot-template

./: README.md  main.py  pyproject.toml
